--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                             
                             <div class="linksContainer">
-                                <a class="viewLiveLink linkBox" href="#" target="_blank">
+                                <a class="viewLiveLink linkBox" href="https://invis.io/M912GDDPBZY4" target="_blank">
                                     <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                     <img class = 'triangle' src = 'Assets/icons/triangle_left.svg'>
                                     <span class = 'linkText'>see demo</span>
