--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                                         <br><br>
                                         <span class = 'functionalities'>Notable functionalities:</span> Shopping cart implementation, persistent cookies, product search feature, and full check-out flow.
                                     </p>
+                                    <p id = 'qualifier'>*Note: this is hosted on a Heroku free-tier and may take a moment to load up! </p>
                                 </div>
 
                                 <div class="linksContainer">
@@ -422,10 +423,7 @@
                 </form>
             <div id="contactOutline"></div> -->
             </section>
-
-            <div id = 'test'></div>
         </main>
-
 
         <footer>
             <div id="footerOutline1">
