--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
                             <div class="infoContainer" id = 'firstInfoContainer'>
                                 <div class = 'projectBody'>
                                     <h5 class="projectTitle">ScheduleBooker
-                                        <!-- :&nbsp; <span class = 'titleDescription'>Appointment-Scheduling Program.</span> -->
                                     </h5>
                                     <p class = 'langsList'>Java | SQL | FXML | CSS3</p>
                                     <p class = 'projectDescription'>
                                         A robust appointment-scheduling desktop program for managing customers and their appointments.
-                                        <br><br>
+                                    </p>
+                                    <p class = 'projectDescription'>
                                         <span class = 'functionalities'>Notable functionalities:</span> authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language/date/time localization, and input verification/error-handling.
                                     </p>
                                 </div>
 
                                 <div class="linksContainer">
-                                    <a class="viewLiveLink linkBox" href="#" target="_blank">
+                                    <a class="viewLiveLink linkBox" href="Project1.html" target="_blank">
                                         <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                         <img class = 'triangle' src = 'Assets/icons/triangle_left.svg'>
                                         <span class = 'linkText'>see demo</span>
@@ -128,12 +128,12 @@
                             <div class="infoContainer">
                                 <div class = 'projectBody'>
                                     <h5 class="projectTitle">TermTracker
-                                        <!-- :&nbsp; <span class = 'titleDescription'>Course-Planning App</span> -->
                                     </h5>
                                     <p class = 'langsList'>Java | FXML</p>
                                     <p class = 'projectDescription'>
                                         A mobile application for Android students to track information pertaining to their terms, courses, and tests.
-                                        <br><br>
+                                    </p>
+                                    <p class = 'projectDescription'>
                                         <span class = 'functionalities'>Notable functionalities:</span> Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.
                                     </p>
                                 </div>
@@ -160,13 +160,12 @@
                             <div class="infoContainer">
                                 <div class = 'projectBody'>
                                     <h5 class="projectTitle">Luma
-                                        <!-- :&nbsp; <span class = 'titleDescription'>Clothing Retailer Ecommerce Website</span> -->
                                     </h5>
-                                    <p class = 'langsList'>JavaScript | Node.js | MongoDB | Express | CSS3 | HTML5</p>
+                                    <p class = 'langsList'>JavaScript | Node.js | MongoDB | Express | EJS | CSS3 | HTML5</p>
                                     <p class = 'projectDescription'>
                                         An eCommerce website built with Express using a MongoDB database of products.
-                                        <br><br>
-                                        <span class = 'functionalities'>Notable functionalities:</span> Shopping cart implementation, persistent cookies, product search feature, and full check-out flow.
+                                    </p>
+                                    <p class = 'projectDescription'>                                        <span class = 'functionalities'>Notable functionalities:</span> Shopping cart implementation, persistent cookies, product search feature, and full check-out flow.
                                     </p>
                                     <p id = 'qualifier'>*Note: this is hosted on a Heroku free-tier and may take a moment to load up! </p>
                                 </div>
@@ -199,7 +198,8 @@
                                     <p class = 'langsList'>JavaScript | CSS3 | HTML5 | APIs</p>
                                     <p class = 'projectDescription'>
                                         A sleek web app for checking current and future weather conditions. Lookup weather in your current location, or choose a custom one. Built from scratch using AccuWeather API.
-                                        <br><br>
+                                    </p>
+                                    <p class = 'projectDescription'> 
                                         <span class = 'functionalities'>Notable functionalities:</span> Auto-detection of user location, location search feature, UI night/day updates based on locale timezone.
                                     </p>
                                 </div>
@@ -326,7 +326,7 @@
                             </ul>
 
                             <p class = 'resumeSubheader'>Web Application — Ecommerce Website</p>
-                            <p class = 'resumeSubtitle'>NODE.JS | JAVASCRIPT | EXPRESS | MONGODB | CSS | HTML</p>
+                            <p class = 'resumeSubtitle'>NODE.JS | JAVASCRIPT | EXPRESS | MONGODB | EJS | CSS | HTML</p>
                             <ul>
                                 <li>
                                     An eCommerce website built with Express using a MongoDB database of products.
