--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                         <div class = 'projectTile' id = 'scheduleBookerTile'>
                             <div class="infoContainer" id = 'firstInfoContainer'>
                                 <div class = 'projectBody'>
-                                    <h5 class="projectTitle">ScheduleBooker
-                                    </h5>
+                                    <h5 class="projectTitle">ScheduleBooker</h5>
                                     <p class = 'langsList'>Java | SQL | FXML | CSS3</p>
                                     <p class = 'projectDescription'>
                                         A robust appointment-scheduling desktop program for managing customers and their appointments.
@@ -106,12 +105,12 @@
                                 </div>
 
                                 <div class="linksContainer">
-                                    <a class="viewLiveLink linkBox" href="Project1.html" target="_blank">
+                                    <a class="viewLiveLink linkBox" href="" target="_blank">
                                         <img class = "viewLiveIcon linkIcon" src = "Assets/icons/eye_icon.svg">
                                         <img class = 'triangle' src = 'Assets/icons/triangle_left.svg'>
-                                        <span class = 'linkText'>see demo</span>
+                                        <span class = 'linkText'>live demo coming soon!</span>
                                     </a>
-                                    <a class="githubLink linkBox" href="https://github.com/jennifer-duff" target="_blank">
+                                    <a class="githubLink linkBox" href="https://github.com/jennifer-duff/ScheduleBooker" target="_blank">
                                         <span class = 'linkText'>view on GitHub</span>
                                         <img class = 'triangle' src = 'Assets/icons/triangle_right.svg'>
                                         <img class = "githubIcon linkIcon" src = "Assets/icons/GitHub_icon.png">
@@ -127,9 +126,8 @@
                         <div class = 'projectTile' id = 'termTrackerTile'>
                             <div class="infoContainer">
                                 <div class = 'projectBody'>
-                                    <h5 class="projectTitle">TermTracker
-                                    </h5>
-                                    <p class = 'langsList'>Java | FXML</p>
+                                    <h5 class="projectTitle">TermTracker</h5>
+                                    <p class = 'langsList'>Java | SQL | FXML</p>
                                     <p class = 'projectDescription'>
                                         A mobile application for Android students to track information pertaining to their terms, courses, and tests.
                                     </p>
@@ -144,7 +142,7 @@
                                         <img class = 'triangle' src = 'Assets/icons/triangle_left.svg'>
                                         <span class = 'linkText'>see demo</span>
                                     </a>
-                                    <a class="githubLink linkBox" href="https://github.com/jennifer-duff" target="_blank">
+                                    <a class="githubLink linkBox" href="https://github.com/jennifer-duff/TermTracker" target="_blank">
                                         <span class = 'linkText'>view on GitHub</span>
                                         <img class = 'triangle' src = 'Assets/icons/triangle_right.svg'>
                                         <img class = "githubIcon linkIcon" src = "Assets/icons/GitHub_icon.png">
@@ -159,8 +157,7 @@
                         <div class = 'projectTile' id = 'lumaTile'>
                             <div class="infoContainer">
                                 <div class = 'projectBody'>
-                                    <h5 class="projectTitle">Luma
-                                    </h5>
+                                    <h5 class="projectTitle">Luma</h5>
                                     <p class = 'langsList'>JavaScript | Node.js | MongoDB | Express | EJS | CSS3 | HTML5</p>
                                     <p class = 'projectDescription'>
                                         An eCommerce website built with Express using a MongoDB database of products.
@@ -192,9 +189,7 @@
                         <div class = 'projectTile' id = 'weatherCheckerTile'>
                             <div class="infoContainer">
                                 <div class = 'projectBody'>
-                                    <h5 class="projectTitle">Weather-Checker
-                                        <!-- :&nbsp; <span class = 'titleDescription'>Weather Forecast Web App</span> -->
-                                    </h5>
+                                    <h5 class="projectTitle">Weather-Checker</h5>
                                     <p class = 'langsList'>JavaScript | CSS3 | HTML5 | APIs</p>
                                     <p class = 'projectDescription'>
                                         A sleek web app for checking current and future weather conditions. Lookup weather in your current location, or choose a custom one. Built from scratch using AccuWeather API.
@@ -319,7 +314,7 @@
                             </ul>
 
                             <p class = 'resumeSubheader'>Android App — Course-Planning Application</p>
-                            <p class = 'resumeSubtitle'>JAVA | FXML</p>
+                            <p class = 'resumeSubtitle'>JAVA | SQL | FXML</p>
                             <ul>
                                 <li>A mobile application for students to track information pertaining to their terms, courses, and tests.</li>
                                 <li>Notable functionalities: Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.</li>
