--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Seattle-based full-stack web and software developer">
-        <meta name="keywords" content="developer, full-stack, web developer, software developer, Jennifer Bowser, software engineer">
+        <meta name="keywords" content="developer, full-stack, web developer, software developer, Jennifer Bowser, software engineer, font-end engineer, font-end developer">
         <meta name="author" content="Jennifer Duff">
 
         <!-- <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css"> -->
@@ -17,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <title>jb development</title>
+        <title>jennifer bowser | full-stack software engineer</title>
     </head>
 
 
