--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
         <link rel="stylesheet" href="responsiveStylesheet.css"/>
         <link rel="icon" href="Assets/logos/altLogo_whiteBackground.png">
-        <link rel="apple-touch-icon" href="Assets/logos/altLogo_whiteBackground.png" sizes = "120 X 120">
-        <link rel="apple-touch-icon" href="Assets/logos/altLogo_whiteBackground.png" sizes = "150 X 150">
-        <link rel="apple-touch-icon-precomposed" href="Assets/logos/altLogo_whiteBackground.png">
+        <link rel="apple-touch-icon" href="Assets/logos/altLogo_mini_120px.png" sizes = "120 X 120">
+        <link rel="apple-touch-icon" href="Assets/logos/altLogo_mini_150px.png" sizes = "150 X 150">
+        <link rel="apple-touch-icon-precomposed" href="Assets/logos/altLogo_mini.svg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
