--- a/index.html
+++ b/index.html
@@ -225,13 +225,15 @@
                     <h2>about me<span class="accent">.</span></h2>
                 </div>
                 <p id="aboutParagraph">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit maxime suscipit accusantium placeat impedit quam nostrum officia dignissimos omnis nulla quae sint temporibus odio, sed, corporis libero voluptatem in. Unde nemo magni, mollitia consequatur a at autem. Accusantium molestias atque deleniti explicabo voluptatem expedita debitis commodi, quis praesentium veritatis.
+                    Hi! I'm Jennifer. I'm a full-stack software engineer based in Washington state. I graduated from Pepperdine University in 2017 with a degree in Biology. Shortly thereafter, I discovered a love of programming and have since graduated with a degree in Software Development, further cementing my passion for software engineering. I love collaboration, and believe that strong teamwork and clear communication are critical to success.
+                    Looking forward to working with you! 
                 </p>
                 <img src="Assets/flourishes/arrows.svg" alt="arrow" id="arrows">
                 <img src = 'Assets/flourishes/wavyArrow.svg' alt = 'wavy arrows' id = 'wavyArrows'>
                 <div class = 'headingWrapper'>
                     <h3>my stack<span class="accent">:</span></h3>
                 </div>
+                <p id = 'stackListSub'>Here are a few technologies I'm enjoying right now:</p>
                 
                 <div id = 'langBoxWrapper'>
                     <div class = 'bracketDiv'></div>
