tweaks to resume

--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
                         <div class = 'resumeUnderline'></div>
 
                             <p class = 'resumeSubheader'>Desktop Program — Appointment Scheduling Software</p>
-                            <p class = 'resumeSubtitle'>JAVA | SQL | CSS</p>
+                            <p class = 'resumeSubtitle'>JAVA | SQL | FXML | CSS</p>
                             <ul>
                                 <li class = 'subBullets'>A program for managing customers and their appointments. Login to add new customers and appointments, see employee schedules, and view live dashboard summaries of appointment stats.</li>
                                 <li class = 'subBullets'>Notable functionalities: authentication with MySQL database, create/read/update/delete capabilities for customer profiles and appointments, language, date, and time localization, and input verification/error-handling.</li>
                             </ul>
 
                             <p class = 'resumeSubheader'>Android App — Course-Planning Application</p>
-                            <p class = 'resumeSubtitle'>JAVA | SQL | FXML</p>
+                            <p class = 'resumeSubtitle'>JAVA | SQL | XML</p>
                             <ul>
                                 <li>A mobile application for students to track information pertaining to their terms, courses, and tests.</li>
                                 <li>Notable functionalities: Create/read/update/delete capabilities for terms/courses/tests/notes, banner notifications for term/course start and end dates, and sharing feature for sending notes via email or SMS.</li>
