tweak to resume wording

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             <ul>
                                 <li>
                                     An eCommerce website built with Express
-                                    using a MongoDB database of products.
+                                    using a MongoDB product database.
                                 </li>
                                 <li>
                                     Notable functionalities: Shopping cart,
