Added React img/fixed resume underlines/nav scroll

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#home">
                 <img
                     src="Assets/logos/altoLogo_full.svg"
-                    alt="jennifer bowser development logo"
+                    alt="'jennifer bowser development' logo"
                     id="headerFullLogo"
                 />
             </a>
@@ -66,10 +66,7 @@
                     >contact
                     <div id="ContactUnderline"></div
                 ></a>
-                <a id="resumeLink" href="#resumeSection"
-                    >resume
-                    <div id="resumeUnderline"></div
-                ></a>
+                <a id="resumeLink" href="#resumeSection">resume</a>
             </nav>
 
             <nav id="hamburgerNav">
@@ -89,7 +86,7 @@
                     >contact
                     <div id="hamContactUnderline"></div
                 ></a>
-                <a id="hamResumeLink" href="#resumeSection">resume</a>
+                <a id="hamResumeLink" href="#resumeSection">resume </a>
             </nav>
             <img
                 src="Assets/icons/menuIcon.svg"
@@ -464,6 +461,7 @@
                                 class="stackLogos"
                                 id="javaLogo"
                                 src="Assets/stackLogos/Java.svg"
+                                alt="Java logo"
                             />
                             <p>Java</p>
                         </div>
@@ -473,6 +471,7 @@
                                 class="stackLogos"
                                 id="nodeLogo"
                                 src="Assets/stackLogos/nodeJS.svg"
+                                alt="Node.js logo"
                             />
                             <p>Node.js</p>
                         </div>
@@ -482,8 +481,19 @@
                                 class="stackLogos"
                                 id="jsLogo"
                                 src="Assets/stackLogos/JS.svg"
+                                alt="JavaScript logo"
                             />
                             <p>JavaScript</p>
+                        </div>
+
+                        <div class="stackWrapper">
+                            <img
+                                class="stackLogos"
+                                id="reactLogo"
+                                src="Assets/stackLogos/React.svg"
+                                alt="React logo"
+                            />
+                            <p>React</p>
                         </div>
 
                         <div class="stackWrapper shortStackLogo">
@@ -491,6 +501,7 @@
                                 class="stackLogos"
                                 id="mongoDBlogo"
                                 src="Assets/stackLogos/mongoDB.svg"
+                                alt="MongoDB logo"
                             />
                             <p>mongoDB</p>
                         </div>
@@ -500,6 +511,7 @@
                                 class="stackLogos"
                                 id="sqlLogo"
                                 src="Assets/stackLogos/SQL.svg"
+                                alt="SQL logo"
                             />
                             <p>SQL</p>
                         </div>
@@ -509,6 +521,7 @@
                                 class="stackLogos"
                                 id="expressLogo"
                                 src="Assets/stackLogos/Express.png"
+                                alt="Express.js logo"
                             />
                             <p>Express</p>
                         </div>
@@ -518,6 +531,7 @@
                                 class="stackLogos"
                                 id="htmlLogo"
                                 src="Assets/stackLogos/HTML.svg"
+                                alt="HTML logo"
                             />
                             <p>HTML</p>
                         </div>
@@ -527,6 +541,7 @@
                                 class="stackLogos"
                                 id="cssLogo"
                                 src="Assets/stackLogos/CSS.svg"
+                                alt="CSS logo"
                             />
                             <p>CSS</p>
                         </div>
@@ -554,7 +569,7 @@
                     <article id="resume">
                         <div id="eduBox">
                             <h5 id="firstResumeHeader">Education</h5>
-                            <div class="resumeUnderline"></div>
+                            <div class="resumeHeaderUnderline"></div>
                             <p class="resumeSubheader">
                                 Western Governors University — B.S., Software
                                 Development
@@ -571,7 +586,7 @@
 
                         <div id="projectsBox">
                             <h5>Projects</h5>
-                            <div class="resumeUnderline"></div>
+                            <div class="resumeHeaderUnderline"></div>
 
                             <p class="resumeSubheader">
                                 Desktop Program — Appointment Scheduling
@@ -639,7 +654,7 @@
 
                         <div id="workExperienceBox">
                             <h5>Work Experience</h5>
-                            <div class="resumeUnderline"></div>
+                            <div class="resumeHeaderUnderline"></div>
                             <p class="resumeSubheader">
                                 FM Global — Field Engineering Assistant II
                             </p>
@@ -670,7 +685,7 @@
                         <div id="resumeFlexBox">
                             <div id="certificationsBox">
                                 <h5>Certifications</h5>
-                                <div class="resumeUnderline"></div>
+                                <div class="resumeHeaderUnderline"></div>
                                 <ul>
                                     <li>CompTIA Project+ Certification</li>
                                     <li>CompTIA A+ Certification</li>
@@ -678,7 +693,7 @@
                             </div>
                             <div id="skillsBox">
                                 <h5>Skills</h5>
-                                <div class="resumeUnderline"></div>
+                                <div class="resumeHeaderUnderline"></div>
                                 <ul>
                                     <li>
                                         Java, JavaScript, Node.JS, React, SQL,
