updated about section

--- a/index.html
+++ b/index.html
@@ -427,13 +427,14 @@
                 </div>
                 <p id="aboutParagraph">
                     Hi! I'm Jennifer. I'm a full-stack software engineer based
-                    in Washington state. I graduated from Pepperdine University
-                    in 2017 with a degree in Biology. Shortly thereafter, I
-                    discovered a love of programming and have since graduated
-                    with a degree in Software Development, further cementing my
-                    passion for software engineering. I love collaboration, and
-                    believe that strong teamwork and clear communication are
-                    critical to success. Looking forward to working with you!
+                    in Seattle, Washington. I graduated from Pepperdine
+                    University in 2017 with a degree in Biology. Shortly
+                    thereafter, I discovered a love of programming and have
+                    since graduated with a degree in Software Development,
+                    further cementing my passion for software engineering. I
+                    love collaboration, and believe that strong teamwork and
+                    clear communication are critical to success. Looking forward
+                    to working with you!
                 </p>
                 <img
                     src="Assets/flourishes/arrows.svg"
